--- a/styles.css
+++ b/styles.css
@@ -10,15 +10,15 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: whitesmoke;
+    color: black;
   }
   
   div {
-    color: whitesmoke;
+    color: black;
   }
   
-  .linkKoko {
-    color: whitesmoke;
+  .downloadPdf {
+    color: black;
     text-decoration: none;
     /* font-family: "Classy Marisa", cursive;    */
   }
